assets/main.css
/* Color design tokens */

.dark-mode {
  --color-scheme: dark;
  --color-white: #120817;
  --color-black: #ffffff;
  --color-text: #ffffff;
  --color-grey-text: #aa91b6;
  --color-grey-graphic: #8b7b93;
  --color-grey-bg: #37293d;

  --color-bg: #1c1320;
  --color-card-bg: #120817;
  --color-card-border: var(--color-grey-bg);
  --color-popover-border: var(--color-grey-bg);

  --color-purple: #c18cd9;
  --color-purple-bg: #362a3c;
  --color-purple-text: #d3b8e0;

  --color-green: #00a854;
  --color-green-bg: #133927;
  --color-green-text: #99ffca;

  --color-orange: #ff8c00;
  --color-orange-bg: #4d2a00;
  --color-orange-text: #ffa333;

  --color-yellow: #f2f20d;
  --color-yellow-bg: #ffff00;
  --color-yellow-text: #57570f;

  --color-red: #eb4747;
  --color-red-bg: #570f0f;
  --color-red-text: #ff7575;

  --color-blue: #3333ff;
  --color-blue-bg: #000080;
  --color-blue-text: #b3b3ff;

  --shadow-color: 282deg 42% 2%;

  --color-input-bg: #121212;
  --color-select-bg: #121212;
}

.light-mode {
  --color-scheme: light;
  --color-white: #ffffff;
  --color-black: #000000;
  --color-text: #161616;
  --color-grey-text: #666666;
  --color-grey-graphic: #808080;
  --color-grey-bg: #e6e6e6;

  --color-bg: #f6f4f7;
  --color-card-bg: #ffffff;
  --color-card-border: transparent;
  --color-popover-border: transparent;

  --color-purple: #582e6b;
  --color-purple-bg: #e7e1ea;
  --color-purple-text: #704d80;

  --color-green: #007a3d;
  --color-green-bg: #d9f2e5;
  --color-green-text: #06793f;

  --color-orange: #ff5c00;
  --color-orange-bg: #ffdfcc;
  --color-orange-text: #a04009;

  --color-yellow: #f2f20d;
  --color-yellow-bg: #fafa9e;
  --color-yellow-text: #57570f;

  --color-red: #ce1a1a;
  --color-red-bg: #ffcccc;
  --color-red-text: #910808;

  --color-blue: #0000ff;
  --color-blue-bg: #ccccff;
  --color-blue-text: #000080;

  --shadow-color: 277deg 8% 60%;

  --color-input-bg: white;
  --color-select-bg: white;

  .card,
  .dialog {
    --color-input-bg: white;
    --color-select-bg: #eeeef1;
  }
}

:root {
  /* Border radius design tokens */
  --radius-xs: 1px;
  --radius-sm: 5px;
  --radius-md: 8px;
  --radius-lg: 22px;
  --radius-full: 999px;

  /* Font size design tokens */
  --font-size-xxl: 2rem;
  --font-size-xl: 1.5rem;
  --font-size-lg: 1.25rem;
  --font-size-md: 1rem;
  --font-size-sm: 0.9rem;
  --font-size-xs: 0.8rem;
  --font-size-xxs: 0.7rem;
  --font-size-xxxs: 0.6rem;

  /* Utility design tokens */
  --color-accent: var(--color-purple);
  --color-accent-bg: var(--color-purple-bg);
  --color-accent-text: var(--color-purple-text);
  --focus-color: var(--color-black);

  /* Shadow design token */
  --shadow-1: 0.3px 0.3px 0.6px hsl(var(--shadow-color) / 0),
    1.3px 1.3px 2.8px hsl(var(--shadow-color) / 0.52);
  --shadow-2: 0.3px 0.5px 0.7px hsl(var(--shadow-color) / 0.18),
    0.9px 1.7px 2.4px -0.5px hsl(var(--shadow-color) / 0.22),
    1.9px 3.9px 5.4px -1.1px hsl(var(--shadow-color) / 0.27),
    4.4px 8.8px 12.3px -1.6px hsl(var(--shadow-color) / 0.31);
  --shadow-3: 0.3px 0.5px 0.7px hsl(var(--shadow-color) / 0.19),
    1.6px 3.3px 4.6px -0.3px hsl(var(--shadow-color) / 0.22),
    3px 6px 8.4px -0.5px hsl(var(--shadow-color) / 0.24),
    4.9px 9.8px 13.7px -0.8px hsl(var(--shadow-color) / 0.27),
    7.8px 15.6px 21.8px -1.1px hsl(var(--shadow-color) / 0.3),
    12.2px 24.5px 34.3px -1.4px hsl(var(--shadow-color) / 0.33),
    18.8px 37.5px 52.5px -1.6px hsl(var(--shadow-color) / 0.35);

  /* Animation design tokens */
  --animation-rotate: rotate var(--duration-xl) linear infinite;

  /* Other design token */
  --app-max-width: 1280px;
  --app-padding-block: 1rem;
  --app-padding-inline: 1rem;

  @media (min-width: 480px) {
    --app-padding-inline: 1.5rem;
  }

  @media (prefers-reduced-motion: no-preference) {
    --duration-sm: 0.15s;
    --duration-md: 0.35s;
    --duration-lg: 0.65s;
    --duration-xl: 1.35s;

    scroll-behavior: smooth;
  }
}

.font-size-xxl {
  font-size: var(--font-size-xxl);
}
.font-size-xl {
  font-size: var(--font-size-xl);
}
.font-size-lg {
  font-size: var(--font-size-lg);
}
.font-size-md {
  font-size: var(--font-size-md);
}
.font-size-sm {
  font-size: var(--font-size-sm);
}
.font-size-xs {
  font-size: var(--font-size-xs);
}
.font-size-xxs {
  font-size: var(--font-size-xxs);
}

/* CSS Reset */
*,
*::after,
*::before {
  box-sizing: border-box;
}

html {
  color-scheme: var(--color-scheme, dark light);
  accent-color: var(--color-accent, inherit);

  -webkit-text-size-adjust: none;
  -moz-text-size-adjust: none;
  text-size-adjust: none;

  /* prevent obscured content when using the keyboard to shift focus */
  scroll-padding-block: 2rem;
  @media (min-width: 360px) {
    scroll-padding-block: 4rem;
  }
}

dd {
  margin-inline-start: 0;
}

body {
  margin: 0;
  min-height: 100svh;
  background-color: var(--color-bg);
  font-family: system-ui, sans-serif;
  line-height: 1.5;
  overflow-wrap: word-break;
}

img {
  word-break: break-all;
  font-style: italic;
  font-size: var(--font-size-xs);
}

img,
picture,
svg {
  display: block;
  max-width: 100%;
  object-fit: cover;
}

figure {
  margin: 0;
}

blockquote {
  margin: 0;
}

a {
  color: currentColor;
  outline-offset: 2px;
  text-underline-offset: 0.2rem;

  &:focus-visible {
    outline: 2px solid var(--focus-color);
  }
}

h1,
h2,
h3,
h4,
h5,
h6,
button,
input,
label,
legend {
  line-height: 1.2;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
  -webkit-hyphens: auto;
  hyphens: auto;
}

b,
strong {
  font-weight: 600;
}

p {
  text-wrap: pretty;
  white-space: pre-line;
}

dl {
  margin-block: 0;
}

ol {
  list-style-position: outside;
  padding-inline-start: 2rem;
}

ul {
  list-style-position: outside;
  padding-inline-start: 1rem;

  li > p {
    margin-block: 0rem 1rem;
  }
}

ul[role='list'],
ol[role='list'] {
  list-style: none;
  padding-inline-start: 0;
  margin-block: 0;
}

ul > li::marker {
  color: inherit;
}

ol > li::marker {
  color: var(--color-accent);
}
/* ... */

